dataset1235/2025-2/2947369575/users/1169719625/executions/1003782500_2383239197.log
== SUBMISSION (2025-08-27 20:30:18)
-- CODE: 
a = float(input("Digite a distancia ate a  primeira arvore: "))
b = float(input("Digite a dsitancia ate a primeira arvore: "))
c = float(input("Digite o angulo entre as distancias em graus: "))

g_rad = math.radians(g)

c = math.sqrt(a**2 + b**2*math.cos(g_rad))

print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 20:34:41)
-- CODE: 
import math

a = float(input("Digite a distancia ate a  primeira arvore: "))
b = float(input("Digite a dsitancia ate a primeira arvore: "))
g = float(input("Digite o angulo entre as distancias em graus: "))

g_rad = math.radians(g)

c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(g_rad))

print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 20:34:37)
-- CODE: 
import math

a = float(input("Digite a distancia ate a  primeira arvore: "))
b = float(input("Digite a dsitancia ate a primeira arvore: "))
g = float(input("Digite o angulo entre as distancias em graus: "))

g_rad = math.radians(g)

c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(g_rad))

print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia ate a  primeira arvore: Digite a dsitancia ate a primeira arvore: Digite o angulo entre as distancias em graus: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
